fixed overlap to next section

--- a/src/styles/RobotModel.css
+++ b/src/styles/RobotModel.css
@@ -1,4 +1,5 @@
 .RobotModel {
   background-color: rgb(255, 255, 255);
   color: rgb(51, 51, 51);
+  padding: 1px;
 }
